--- a/package.json
+++ b/package.json
@@ -14,30 +14,31 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
-    "cookie-parser": "^1.4.4",
+    "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
     "express-mailer": "^0.3.1",
     "express-session": "^1.17.0",
-    "express-validator": "^6.3.1",
+    "express-validator": "^6.4.0",
     "method-override": "^3.0.0",
-    "mongoose": "^5.8.9",
+    "mongoose": "^5.9.4",
     "mongoose-paginate-v2": "^1.3.6",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "req-flash": "0.0.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.2",
-    "@types/mongoose": "^5.5.43",
-    "@types/node": "^13.5.0",
+    "@types/express": "^4.17.3",
+    "@types/mongoose": "^5.7.6",
+    "@types/node": "^13.9.1",
     "css-loader": "^3.4.2",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "nodemon": "^2.0.2",
     "sass-loader": "^8.0.2",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   }
 }
