--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
